fix issues and add copy contact info functionality

--- a/stages/ejs/about.ejs
+++ b/stages/ejs/about.ejs
@@ -5,9 +5,10 @@
   <main id="about">
     <h1 class="heading-lg">About <span class="text-secondary">Me</span></h1>
     <h2 class="heading-sm">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-      voluptate suscipit veritatis reiciendis temporibus sapiente eum vitae
-      atque hic. Deserunt!
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam nisi
+      eos reprehenderit id enim laboriosam, accusamus nihil, distinctio
+      consequatur nesciunt error! Nihil velit quod accusantium qui magnam
+      deserunt sapiente consequuntur.
     </h2>
 
     <div class="about-info">
@@ -25,10 +26,10 @@
         <h3>Example1</h3>
         <!-- <h5>Languages and Technology</h5> -->
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
-          temporibus voluptatem soluta et fugiat voluptatum non fuga qui
-          provident doloresl Lorem ipsum dolor, sit amet consectetur adipisicing
-          elit. Id, voluptatem?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam nisi
+          eos reprehenderit id enim laboriosam, accusamus nihil, distinctio
+          consequatur nesciunt error! Nihil velit quod accusantium qui magnam
+          deserunt sapiente consequuntur.
         </p>
       </div>
       <div class="jop jop-2" data-aos="fade-right">
@@ -42,7 +43,8 @@
         </p>
       </div>
       <div class="jop jop-3" data-aos="fade-left">
-        <h3>Example1</h3>
+        <h3>Example3</h3>
+        -->
         <!-- <h5>Lorem ipsum dolor sit.</h5> -->
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam nisi
