--- a/stages/ejs/about.ejs
+++ b/stages/ejs/about.ejs
@@ -5,10 +5,10 @@
   <main id="about">
     <h1 class="heading-lg">About <span class="text-secondary">Me</span></h1>
     <h2 class="heading-sm">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam nisi
-      eos reprehenderit id enim laboriosam, accusamus nihil, distinctio
-      consequatur nesciunt error! Nihil velit quod accusantium qui magnam
-      deserunt sapiente consequuntur.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam nisi eos
+      reprehenderit id enim laboriosam, accusamus nihil, distinctio consequatur
+      nesciunt error! Nihil velit quod accusantium qui magnam deserunt sapiente
+      consequuntur.
     </h2>
 
     <div class="about-info">
