add resume button functionality and style, add uglify and sourcemaps plugins to gulpfile, add task to dynamic  modify and export js script src in end of html

--- a/stages/ejs/static/end.ejs
+++ b/stages/ejs/static/end.ejs
@@ -1,6 +1,11 @@
 
 
-
-    <script src="js/main.js"></script>
-</body>
+  <footer id="main-footer">
+    Copyright &copy; Khalid Ayed
+  </footer>
+    <!-- Make sure after update javascript file, copy new genrated file name and pasted down from dist -->
+    <script src="js/<%=fileName%>"></script>
+     
+</body>   
 </html>
+          
