--- a/stages/ejs/static/head.ejs
+++ b/stages/ejs/static/head.ejs
@@ -7,9 +7,10 @@
       content="width=
     , initial-scale=1.0"
     />
-    <script src="https://kit.fontawesome.com/5454cfe8d5.js"></script>
+    <link rel="icon" href="/img/favicon.png" />
+    <script src="https://kit.fontawesome.com/5acf9fbb31.js"></script>
     <link rel="stylesheet" href="css\main.css" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>My Portfolio</title>
+    <title>Khalid</title>
   </head>
 </html>
