--- a/stages/scss/_config.scss
+++ b/stages/scss/_config.scss
@@ -1,5 +1,6 @@
 $primary-color: #444;
 $secondary-color: #eece1a;
+$primary-white: #fff;
 $show-image-home: true;
 $home-image: url(../img/background.jpg);
 $background-opacity: 0.9;
