--- a/stages/ejs/about.ejs
+++ b/stages/ejs/about.ejs
@@ -5,10 +5,10 @@
   <main id="about">
     <h1 class="heading-lg">About <span class="text-secondary">Me</span></h1>
     <h2 class="heading-sm">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam nisi eos
-      reprehenderit id enim laboriosam, accusamus nihil, distinctio consequatur
-      nesciunt error! Nihil velit quod accusantium qui magnam deserunt sapiente
-      consequuntur.
+      I am a Full-Stack developer, interesting in web app development,
+      optimization, performance, I have good knowledge with javascript language
+      and other web technology like React&Redux, I have a motivation to learn
+      new things and do things, It has a positive return on my career.
     </h2>
 
     <div class="about-info">
@@ -23,36 +23,47 @@
             </p>
           </div> -->
       <div class="jop jop-1" data-aos="fade-left">
-        <h3>Example1</h3>
+        <h3>Front-end Development Skills</h3>
         <!-- <h5>Languages and Technology</h5> -->
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam nisi
-          eos reprehenderit id enim laboriosam, accusamus nihil, distinctio
-          consequatur nesciunt error! Nihil velit quod accusantium qui magnam
-          deserunt sapiente consequuntur.
+          I have good knowledge with basic web languages (HTML, CSS, JS) and
+          React Library, some other UI frameworks and Libraries like Bootstrap4
+          and Material UI, React Bootstrap and few more.
         </p>
       </div>
       <div class="jop jop-2" data-aos="fade-right">
-        <h3>Example2</h3>
+        <h3>Back-end Development Siklls</h3>
         <!-- <h5>Technology and Environment</h5> -->
         <p>
+          I have good knowledge with NodeJS run-time environment, and Express
+          framework, Python&flask(basic knowledge), MongoDB&mongoose and I had
+          to work with SQL databases like PostgresSQL and MySQL.
+        </p>
+      </div>
+      <!-- <div class="jop jop-3" data-aos="fade-left"> -->
+      <!-- <h3>Example3</h3> -->
+
+      <!-- <h5>Lorem ipsum dolor sit.</h5> -->
+      <!-- <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam nisi
           eos reprehenderit id enim laboriosam, accusamus nihil, distinctio
           consequatur nesciunt error! Nihil velit quod accusantium qui magnam
           deserunt sapiente consequuntur.
-        </p>
-      </div>
-      <div class="jop jop-3" data-aos="fade-left">
-        <h3>Example3</h3>
-        -->
-        <!-- <h5>Lorem ipsum dolor sit.</h5> -->
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam nisi
-          eos reprehenderit id enim laboriosam, accusamus nihil, distinctio
-          consequatur nesciunt error! Nihil velit quod accusantium qui magnam
-          deserunt sapiente consequuntur.
-        </p>
-      </div>
+        </p> -->
+      <!-- </div> -->
+    </div>
+    <div id="dd" class="wrapper-dropdown" tabindex="1">
+      <span>Resume</span>
+      <ul class="dropdown">
+        <li>
+          <a href="./data/resume.pdf" download
+            ><i class="fas fa-file-download"></i>Download</a
+          >
+        </li>
+        <li>
+          <a href="./data/resume.pdf"><i class="fas fa-eye"></i>View Online</a>
+        </li>
+      </ul>
     </div>
   </main>
   <%- include('./static/end') %>
