--- a/stages/ejs/work.ejs
+++ b/stages/ejs/work.ejs
@@ -40,6 +40,15 @@
           ><i class="fab fa-github-square"></i> Github</a
         >
       </div>
+      <div class="item">
+        <a href="https://github.com/0DKhalid/Bootcamps_API.git">
+          <img src="./img/projects/devcamper.png" alt="project1" />
+        </a>
+        <!-- <a href="!#" class="light-btn"><i class="fas fa-eye"></i>Project</a> -->
+        <a href="https://github.com/0DKhalid/Bootcamps_API.git" class="dark-btn"
+          ><i class="fab fa-github-square"></i> Github</a
+        >
+      </div>
     </div>
   </main>
   <%- include('./static/end') %>
