--- a/stages/ejs/about.ejs
+++ b/stages/ejs/about.ejs
@@ -57,12 +57,14 @@
       <span>Resume</span>
       <ul class="dropdown">
         <li>
-          <a href="./data/resume.pdf" download
+          <a href="./data/resumeExample.pdf" download
             ><i class="fas fa-file-download"></i>Download</a
           >
         </li>
         <li>
-          <a href="./data/resume.pdf"><i class="fas fa-eye"></i>View Online</a>
+          <a href="./data/resumeExample.pdf"
+            ><i class="fas fa-eye"></i>View Online</a
+          >
         </li>
       </ul>
     </div>
