add ar translate functionallity

--- a/stages/ejs/contact.ejs
+++ b/stages/ejs/contact.ejs
@@ -2,16 +2,20 @@
 <body>
   <%- include('./static/nav') %>
   <main id="contact">
-    <h1 class="heading-lg">Contact<span class="text-secondary"> Me</span></h1>
+    <h1 class="heading-lg" data-ar="contact">
+      Contact<span class="text-secondary" data-ar="meText"> Me</span>
+    </h1>
     <!-- <h2 class="heading-sm">rech </h2> -->
     <div class="boxes">
       <!-- email box -->
       <div id="email">
-        <span class="text-secondary">Email: </span> khalid@example.com
+        <span class="text-secondary" data-ar="email">Email: </span>
+        khalid@example.com
       </div>
       <!-- Phone box -->
       <div id="phone-number">
-        <span class="text-secondary">Phone: </span> +960000000000
+        <span class="text-secondary" data-ar="phone">Phone: </span>
+        +960000000000
       </div>
       <!-- Address box -->
       <!-- <div>
