--- a/stages/ejs/static/end.ejs
+++ b/stages/ejs/static/end.ejs
@@ -3,9 +3,8 @@
   <footer id="main-footer">
     Copyright &copy; Khalid Ayed
   </footer>
-    <!-- Make sure after update javascript file, copy new genrated file name and pasted down from dist -->
+  <script src="https://wzrd.in/standalone/copy-to-clipboard@latest" async></script>
     <script src="js/<%=fileName%>"></script>
-     
 </body>   
 </html>
           
