--- a/stages/ejs/static/nav.ejs
+++ b/stages/ejs/static/nav.ejs
@@ -11,16 +11,34 @@
     </div>
     <ul class="menu-nav">
       <li class="nav-item current">
-        <a href="index.html" class="nav-link">Home</a>
+        <a href="index.html" class="nav-link" data-ar="home">Home</a>
       </li>
       <li class="nav-item">
-        <a href="about.html" class="nav-link">About Me</a>
+        <a href="about.html" class="nav-link" data-ar="aboutMe">About Me</a>
       </li>
       <li class="nav-item">
-        <a href="work.html" class="nav-link">My Work</a>
+        <a href="work.html" class="nav-link" data-ar="myWork">My Works</a>
       </li>
       <li class="nav-item">
-        <a href="contact.html" class="nav-link">How To Reach Me</a>
+        <a href="contact.html" class="nav-link" data-ar="contactMe"
+          >Contact Me</a
+        >
+      </li>
+      <li>
+        <div>
+          <div class="onoffswitch">
+            <input
+              type="checkbox"
+              name="onoffswitch"
+              class="onoffswitch-checkbox lang-switch"
+              id="myonoffswitch"
+            />
+            <label class="onoffswitch-label" for="myonoffswitch">
+              <span class="onoffswitch-inner"></span>
+              <span class="onoffswitch-switch"></span>
+            </label>
+          </div>
+        </div>
       </li>
     </ul>
   </nav>
