--- a/stages/ejs/work.ejs
+++ b/stages/ejs/work.ejs
@@ -2,8 +2,9 @@
 <body>
   <%- include('./static/nav') %>
   <main id="work">
-    <h1 class="heading-lg">My <span class="text-secondary">Works</span></h1>
-    <h2 class="heading-sm">Check out My Work</h2>
+    <h1 class="heading-lg" data-ar="some">
+      My <span class="text-secondary" data-ar="works">Works</span>
+    </h1>
     <div class="projects">
       <div class="item">
         <a href="https://github.com/0DKhalid/color-picker.git">
