--- a/stages/ejs/about.ejs
+++ b/stages/ejs/about.ejs
@@ -3,8 +3,10 @@
 <body>
   <%- include('./static/nav') %>
   <main id="about">
-    <h1 class="heading-lg">About <span class="text-secondary">Me</span></h1>
-    <h2 class="heading-sm">
+    <h1 class="heading-lg" data-ar="about">
+      About <span data-ar="me" class="text-secondary">Me</span>
+    </h1>
+    <h2 class="heading-sm" data-ar="aboutSummary">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam nisi eos
       reprehenderit id enim laboriosam, accusamus nihil, distinctio consequatur
       nesciunt error! Nihil velit quod accusantium qui magnam deserunt sapiente
@@ -23,9 +25,9 @@
             </p>
           </div> -->
       <div class="jop jop-1" data-aos="fade-left">
-        <h3>Example1</h3>
+        <h3 data-ar="frontSkillsTitle">Front-end Development Skills</h3>
         <!-- <h5>Languages and Technology</h5> -->
-        <p>
+        <p data-ar="frontSkillsDetial">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam nisi
           eos reprehenderit id enim laboriosam, accusamus nihil, distinctio
           consequatur nesciunt error! Nihil velit quod accusantium qui magnam
@@ -33,9 +35,9 @@
         </p>
       </div>
       <div class="jop jop-2" data-aos="fade-right">
-        <h3>Example2</h3>
+        <h3 data-ar="backSkillsTitle">Back-end Development Siklls</h3>
         <!-- <h5>Technology and Environment</h5> -->
-        <p>
+        <p data-ar="backSkillsDetial">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam nisi
           eos reprehenderit id enim laboriosam, accusamus nihil, distinctio
           consequatur nesciunt error! Nihil velit quod accusantium qui magnam
@@ -43,10 +45,10 @@
         </p>
       </div>
       <div class="jop jop-3" data-aos="fade-left">
-        <h3>Example3</h3>
+        <h3 data-ar="otherSkillsTitle">Other Siklls</h3>
 
         <!-- <h5>Lorem ipsum dolor sit.</h5> -->
-        <p>
+        <p data-ar="otherSkillsDetial">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam nisi
           eos reprehenderit id enim laboriosam, accusamus nihil, distinctio
           consequatur nesciunt error! Nihil velit quod accusantium qui magnam
@@ -54,16 +56,18 @@
         </p>
       </div>
     </div>
-    <div id="dd" class="wrapper-dropdown" tabindex="1">
-      <span>Resume</span>
+    <div id="dd" class="wrapper-dropdown" tabindex="1" dir="ltr">
+      <span data-ar="resume">Resume</span>
       <ul class="dropdown">
         <li>
-          <a href="./data/resume.pdf" download
+          <a href="./data/resume.pdf" download data-ar="download"
             ><i class="fas fa-file-download"></i>Download</a
           >
         </li>
         <li>
-          <a href="./data/resume.pdf"><i class="fas fa-eye"></i>View Online</a>
+          <a href="./data/resume.pdf" data-ar="view"
+            ><i class="fas fa-eye"></i>View Online</a
+          >
         </li>
       </ul>
     </div>
