--- a/stages/ejs/static/head.ejs
+++ b/stages/ejs/static/head.ejs
@@ -8,7 +8,11 @@
     , initial-scale=1.0"
     />
     <link rel="icon" href="/img/favicon.png" />
-    <script src="https://kit.fontawesome.com/<Your Kit>"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js"
+      integrity="sha512-YSdqvJoZr83hj76AIVdOcvLWYMWzy6sJyIMic2aQz5kh2bPTd9dzY3NtdeEAzPp/PhgZqr4aJObB3ym/vsItMg=="
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css\main.css" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Khalid</title>
