--- a/stages/ejs/about.ejs
+++ b/stages/ejs/about.ejs
@@ -61,13 +61,13 @@
       <ul class="dropdown">
         <li>
           <a href="./data/resume.pdf" download data-ar="download"
-            ><i class="fas fa-file-download"></i>Download</a
-          >
+            >Download <i class="fas fa-file-download"></i
+          ></a>
         </li>
         <li>
           <a href="./data/resume.pdf" data-ar="view"
-            ><i class="fas fa-eye"></i>View Online</a
-          >
+            >View Online <i class="fas fa-eye"></i
+          ></a>
         </li>
       </ul>
     </div>
