add gulp task to minify images

--- a/stages/ejs/static/nav.ejs
+++ b/stages/ejs/static/nav.ejs
@@ -24,7 +24,7 @@
           >Contact Me</a
         >
       </li>
-      <li>
+      <li class="nav-item">
         <div>
           <div class="onoffswitch">
             <input
