--- a/stages/ejs/work.ejs
+++ b/stages/ejs/work.ejs
@@ -8,7 +8,7 @@
     <div class="projects">
       <div class="item">
         <a href="https://github.com/0DKhalid/color-picker.git">
-          <img src="./img/projects/color-picker-project.png" alt="project1" />
+          <img src="./img/color-picker-project.png" alt="project1" />
         </a>
         <!-- <a href="!#" class="light-btn"><i class="fas fa-eye"></i>Project</a> -->
         <a href="https://github.com/0DKhalid/color-picker.git" class="dark-btn"
@@ -20,7 +20,7 @@
       -->
       <div class="item">
         <a href="https://github.com/0DKhalid/face-recognition-brain.git">
-          <img src="./img/projects/face-recognition-app.png" alt="project1" />
+          <img src="./img/face-recognition-app.png" alt="project1" />
         </a>
         <!-- <a href="!#" class="light-btn"><i class="fas fa-eye"></i>Project</a> -->
         <a
@@ -32,7 +32,7 @@
 
       <div class="item">
         <a href="https://github.com/0DKhalid/burger-builder.git">
-          <img src="./img/projects/burger-builder-app.png" alt="project1" />
+          <img src="./img/burger-builder-app.png" alt="project1" />
         </a>
         <!-- <a href="!#" class="light-btn"><i class="fas fa-eye"></i>Project</a> -->
         <a
@@ -43,7 +43,7 @@
       </div>
       <div class="item">
         <a href="https://github.com/0DKhalid/Bootcamps_API.git">
-          <img src="./img/projects/devcamper.png" alt="project1" />
+          <img src="./img/devcamper.png" alt="project1" />
         </a>
         <!-- <a href="!#" class="light-btn"><i class="fas fa-eye"></i>Project</a> -->
         <a href="https://github.com/0DKhalid/Bootcamps_API.git" class="dark-btn"
