upgrade to gulp v4

--- a/stages/ejs/about.ejs
+++ b/stages/ejs/about.ejs
@@ -10,7 +10,7 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam nisi eos
       reprehenderit id enim laboriosam, accusamus nihil, distinctio consequatur
       nesciunt error! Nihil velit quod accusantium qui magnam deserunt sapiente
-      consequuntur Lorem ipsum dolor sit Lorem, ipsum cool.
+      consequuntu Lorem ipsum dolor sit Lorem, ipsum cool..
     </h2>
 
     <div class="about-info">
