add browsersync add build for production script and watch script for development, fix 404 js file problem

--- a/stages/ejs/static/end.ejs
+++ b/stages/ejs/static/end.ejs
@@ -4,7 +4,7 @@
     Copyright &copy; Khalid Ayed
   </footer>
   <script src="https://wzrd.in/standalone/copy-to-clipboard@latest" async></script>
-    <script src="js/<%=fileName%>"></script>
+    <script src="<%=fileName%>"></script>
 </body>   
 </html>
           
